.\feat(logging): actualizar logback a versión segura y mejorar configuración de logging
- Actualizada la dependencia de logback-classic a la versión 1.4.x para resolver vulnerabilidades de deserialización (CVE-2021-42550 y CVE-2023-6378).
- Implementada compresión de archivos de log (.gz) para ahorrar espacio en disco.
- Añadido manejo de logs asíncronos para mejorar el rendimiento general del sistema.
- Añadido un filtro para eliminar información sensible de los logs, como contraseñas y datos confidenciales.
- Configurada rotación de logs por tamaño y tiempo para evitar el crecimiento descontrolado de archivos.
- Implementada notificación por correo electrónico para errores críticos en producción.
- Ajustados los niveles de logging para los entornos de desarrollo (DEBUG) y producción (INFO).

--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,16 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.30</version>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.4.14</version> <!-- Actualiza a la última versión estable -->
+		</dependency>
 	</dependencies>
 
 	<build>
